# kimtoy

./: CMakeLists.txt  ChangeLog  ChangeLog.zh_CN  Messages.sh  README  animator.cpp  animator.h  appearance.h  appearance.ui  envsettings.cpp  envsettings.h  filtermenu.cpp  filtermenu.h  impanel.cpp  impanel.h  impanelagent.cpp  impanelagent.h  impanelagent_p.cpp  impanelagent_p.h  inputmethod.h  inputmethod.ui  inputmethods.cpp  inputmethods.h  kimtoy.cpp  kimtoy.desktop  kimtoy.h  kimtoy.knsrc  kimtoysettings.kcfg  kimtoysettings.kcfgc  kssf.cpp  kssf.h  main.cpp  org.kde.impanel.inputmethod.xml  org.kde.impanel.xml  org.kde.kimtoy.appdata.xml  org.kde.kimtoy.desktop  performance.h  performance.ui  preeditbar.cpp  preeditbar.h  (+27 more)
cmake/: FindIBus.cmake  FindPthread.cmake  FindSCIM.cmake
fileitemaction/: CMakeLists.txt  installskinfileitemaction.cpp  installskinfileitemaction.h  installskinfileitemaction.json
ibus-kconfig/: CMakeLists.txt  config.cpp  config.h  kconfig.xml  kconfig.xml.in  main.cpp
ibus-panel/: CMakeLists.txt  impanel.xml  impanel.xml.in  main.c  panel.c  panel.h  panel.py
icons/: CMakeLists.txt
kimgio-apng/: CMakeLists.txt  apng.cpp  apng.desktop  apng.h  apng.json  apng.xml  apnginternal.h  internalize.sed
kimgio-apng/libpng-apng/: LICENSE  README  png.c  png.h  pngconf.h  pngerror.c  pngget.c  pnginfo.h  pngmem.c  pngpread.c  pngpriv.h  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngstruct.h  pngtrans.c  pngvalid.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
metadataextractor/: CMakeLists.txt  fskinextractor.cpp  fskinextractor.h  ssfextractor.cpp  ssfextractor.h
po/: CMakeLists.txt  kimtoy.pot  zh_CN.po
scim-kconfig/: CMakeLists.txt  scim_kconfig_config.cpp  scim_kconfig_config.h
scim-panel/: CMakeLists.txt  main.cpp  panel.cpp  panel.h  scim_panel_impanel.cpp
strigi-analyzer/: CMakeLists.txt  fskinendanalyzer.cpp  fskinendanalyzer.h  ssfendanalyzer.cpp  ssfendanalyzer.h
thumbnailer/: CMakeLists.txt  fskin.xml  fskincreator.cpp  fskincreator.h  fskinthumbnail.desktop  ssf.xml  ssfcreator.cpp  ssfcreator.h  ssfthumbnail.desktop
