find_package(IBus)
find_package(DBus)
find_package(GLIB2)
find_package(GObject)
if(IBUS_FOUND AND DBUS_FOUND AND GLIB2_FOUND AND GOBJECT_FOUND)
    include_directories(${IBUS_INCLUDE_DIR})
    include_directories(${DBUS_INCLUDE_DIR} ${DBUS_ARCH_INCLUDE_DIR})
    include_directories(${GLIB2_INCLUDE_DIR})
    include_directories(${GOBJECT_INCLUDE_DIR})
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
    set(kimtoy_ibus_kconfig_SRCS config.cpp main.cpp)
    add_executable(kimtoy-ibus-kconfig ${kimtoy_ibus_kconfig_SRCS})
    target_link_libraries(kimtoy-ibus-kconfig ${IBUS_LIBRARIES} ${GLIB2_LIBRARIES} ${GOBJECT_LIBRARIES} ${KDE4_KDECORE_LIBS})
    install(TARGETS kimtoy-ibus-kconfig DESTINATION ${LIBEXEC_INSTALL_DIR})
endif(IBUS_FOUND AND DBUS_FOUND AND GLIB2_FOUND AND GOBJECT_FOUND)
