
if(IBUS_FOUND AND GLIB2_FOUND AND GIO_FOUND AND GOBJECT_FOUND)
    include_directories(${IBUS_INCLUDE_DIR})
    include_directories(${GLIB2_INCLUDE_DIR})
    include_directories(${GOBJECT_INCLUDE_DIR})
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/kconfig.xml.in ${CMAKE_CURRENT_BINARY_DIR}/kconfig.xml)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
    set(ibus_kconfig_SRCS config.cpp main.cpp)
    add_executable(ibus-kconfig ${ibus_kconfig_SRCS})
    target_link_libraries(ibus-kconfig ${IBUS_LIBRARIES} ${GLIB2_LIBRARIES} ${GIO_LIBRARIES} ${GOBJECT_LIBRARIES} ${KDE4_KDECORE_LIBS})
    set_target_properties(ibus-kconfig PROPERTIES OUTPUT_NAME ibus-kconfig)
    install(TARGETS ibus-kconfig DESTINATION ${IBUS_LIBEXEC_DIR})
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/kconfig.xml DESTINATION ${IBUS_COMPONENT_DIR})
endif(IBUS_FOUND AND GLIB2_FOUND AND GIO_FOUND AND GOBJECT_FOUND)
