find_package(IBus)
find_package(GLIB2)
find_package(GIO)
if(IBUS_FOUND AND GLIB2_FOUND AND GIO_FOUND)
    include_directories(${IBUS_INCLUDE_DIR})
    include_directories(${GLIB2_INCLUDE_DIR})
    include_directories(${GIO_INCLUDE_DIR})
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
    set(kimtoy_ibus_panel_SRCS panel.c main.c)
    add_executable(kimtoy-ibus-panel ${kimtoy_ibus_panel_SRCS})
    target_link_libraries(kimtoy-ibus-panel ${IBUS_LIBRARIES} ${GLIB2_LIBRARIES} ${GIO_LIBRARIES})
    install(TARGETS kimtoy-ibus-panel DESTINATION ${DATA_INSTALL_DIR}/kimtoy)
endif(IBUS_FOUND AND GLIB2_FOUND AND GIO_FOUND)
