
if(IBUS_FOUND AND GLIB2_FOUND AND GIO_FOUND AND GOBJECT_FOUND)
    include_directories(${IBUS_INCLUDE_DIR})
    include_directories(${GLIB2_INCLUDE_DIR})
    include_directories(${GIO_INCLUDE_DIR})
    include_directories(${GOBJECT_INCLUDE_DIR})
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/impanel.xml.in ${CMAKE_CURRENT_BINARY_DIR}/impanel.xml)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
    set(ibus_impanel_SRCS panel.c main.c)
    add_executable(ibus-impanel ${ibus_impanel_SRCS})
    target_link_libraries(ibus-impanel ${IBUS_LIBRARIES} ${GLIB2_LIBRARIES} ${GIO_LIBRARIES} ${GOBJECT_LIBRARIES})
    set_target_properties(ibus-impanel PROPERTIES OUTPUT_NAME ibus-ui-impanel)
    install(TARGETS ibus-impanel DESTINATION ${IBUS_LIBEXEC_DIR})
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/impanel.xml DESTINATION ${IBUS_COMPONENT_DIR})
endif(IBUS_FOUND AND GLIB2_FOUND AND GIO_FOUND AND GOBJECT_FOUND)
