
# TODO remove -fexceptions once https://gerrit.chromium.org/gerrit/16128 upstreamed
add_definitions(-fexceptions)
include_directories(${SCIM_INCLUDE_DIR})
include_directories(${DBUSCXX_INCLUDE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${PTHREAD_INCLUDE_DIR})
configure_file(config-scim.h.cmake config-scim.h)
set(scim_impanel_SRCS scim_panel_impanel.cpp)
dbuscxx_add_dbus_adaptor(scim_impanel_SRCS ../org.kde.impanel.inputmethod.xml)
dbuscxx_add_dbus_proxy(scim_impanel_SRCS ../org.kde.impanel.xml)
add_executable(scim-impanel ${scim_impanel_SRCS})
target_link_libraries(scim-impanel ${SCIM_LIBRARIES} ${DBUSCXX_LIBRARIES} ${PTHREAD_LIBRARIES})
set_target_properties(scim-impanel PROPERTIES OUTPUT_NAME scim-panel-impanel)
install(TARGETS scim-impanel DESTINATION ${SCIM_LIBEXEC_DIR})
